# itkExternalTemplate

./: .travis.yml  CMakeLists.txt  README  README.md  README.rst  appveyor.yml  azure-pipelines.yml  cookiecutter.json  itk-module.cmake  setup.py
.circleci/: config.yml
include/: itkLogNormalDistributionImageSource.h  itkLogNormalDistributionImageSource.hxx  itkMinimalStandardRandomVariateGenerator.h
src/: CMakeLists.txt  itkMinimalStandardRandomVariateGenerator.cxx  itkSomeFile.cxx
test/: CMakeLists.txt  itkEmptyTest.cxx  itkLogNormalDistributionImageSourceTest.cxx  itkMinimalStandardRandomVariateGeneratorTest.cxx
test/Baseline/: itkLogNormalDistributionImageSourceTestOutput.mha.md5
test/ci/: dashboard.cmake
wrapping/: itkLogNormalDistributionImageSource.wrap
{{cookiecutter.project_name}}/: CMakeLists.txt  README.rst  itk-module.cmake  setup.py
{{cookiecutter.project_name}}/.circleci/: config.yml
{{cookiecutter.project_name}}/include/: itkMinimalStandardRandomVariateGenerator.h  itkNormalDistributionImageSource.h  itkNormalDistributionImageSource.hxx  itk{{cookiecutter.filter_name}}.h  itk{{cookiecutter.filter_name}}.hxx
{{cookiecutter.project_name}}/src/: CMakeLists.txt
{{cookiecutter.project_name}}/test/: CMakeLists.txt  azure-pipelines.yml  itkNormalDistributionImageSourceTest.cxx  itk{{cookiecutter.filter_name}}Test.cxx
{{cookiecutter.project_name}}/wrapping/: CMakeLists.txt  itk{{cookiecutter.filter_name}}.wrap
